--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,44 @@
 plugins {
     id 'java'
+    id 'io.freefair.lombok' version '6.3.0'
+    id 'idea'
+	id 'io.qameta.allure' version '2.9.6'
 }
 
-group 'org.example'
+group 'ru.netology'
 version '1.0-SNAPSHOT'
+
+sourceCompatibility = 11
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
+allure {
+    version = '2.13.3'
+    useJUnit5 {
+        version = '2.13.3'
+    }
+}
+
+configurations {
+    testCompile
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    implementation 'org.postgresql:postgresql:42.3.1'
+    implementation 'commons-dbutils:commons-dbutils:1.7'
+    testImplementation 'com.codeborne:selenide:6.1.2'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.qameta.allure:allure-selenide:2.17.2'
+	testImplementation 'org.awaitility:awaitility:4.1.1'
 }
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
