--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
 allure {
+    autoconfigure = true
     version = '2.13.3'
+
     useJUnit5 {
         version = '2.13.3'
     }
@@ -36,6 +38,7 @@ dependencies {
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'io.qameta.allure:allure-selenide:2.17.2'
 	testImplementation 'org.awaitility:awaitility:4.1.1'
+
 }
 
 test {
