Success - Tests and Reports are up to date

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
 org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-11.0.14.101-hotspot
+#systemProp.selenide.startMaximized=true
+systemProp.db.url=jdbc:postgresql://localhost:5432/app_db
+systemProp.db.user=user
+systemProp.db.password=pass
